[gd_scene load_steps=3 format=2]

[ext_resource path="res://DialogueManager.gd" type="Script" id=1]
[ext_resource path="res://assets/art/hover_bubble.png" type="Texture" id=2]

[node name="DialogueManager" type="Node2D"]
script = ExtResource( 1 )

[node name="BubbleParts" type="Node2D" parent="."]

[node name="TopLeftBubble" type="Sprite" parent="BubbleParts"]
position = Vector2( 50, 0 )
texture = ExtResource( 2 )
centered = false
hframes = 9

[node name="TopMiddleBubble" type="Sprite" parent="BubbleParts"]
position = Vector2( 55, 0 )
scale = Vector2( 74, 1 )
texture = ExtResource( 2 )
centered = false
hframes = 9
frame = 1

[node name="TopRightBubble" type="Sprite" parent="BubbleParts"]
position = Vector2( 425, 0 )
texture = ExtResource( 2 )
centered = false
hframes = 9
frame = 2

[node name="MiddleLeftBubble" type="Sprite" parent="BubbleParts"]
position = Vector2( 50, 5 )
scale = Vector2( 1, 9 )
texture = ExtResource( 2 )
centered = false
hframes = 9
frame = 3

[node name="MiddleRightBubble" type="Sprite" parent="BubbleParts"]
position = Vector2( 425, 5 )
scale = Vector2( 1, 9 )
texture = ExtResource( 2 )
centered = false
hframes = 9
frame = 4

[node name="BottomLeftBubble" type="Sprite" parent="BubbleParts"]
position = Vector2( 50, 50 )
texture = ExtResource( 2 )
centered = false
hframes = 9
frame = 5

[node name="BottomMiddleBubble" type="Sprite" parent="BubbleParts"]
position = Vector2( 55, 50 )
scale = Vector2( 74, 1 )
texture = ExtResource( 2 )
centered = false
hframes = 9
frame = 6

[node name="BottomRightBubble" type="Sprite" parent="BubbleParts"]
position = Vector2( 425, 50 )
texture = ExtResource( 2 )
centered = false
hframes = 9
frame = 7

[node name="MiddleMiddleBubble" type="Sprite" parent="BubbleParts"]
position = Vector2( 55, 5 )
scale = Vector2( 74, 9 )
texture = ExtResource( 2 )
centered = false
hframes = 9
frame = 8

[node name="DialogueLabel" type="Label" parent="."]
margin_left = 55.0
margin_top = 3.0
margin_right = 425.0
margin_bottom = 51.0

[node name="StartUpDelay" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="StartUpDelay" to="." method="_on_StartUpDelay_timeout"]
